<resources>
    <string name="app_name">WorkoutApp</string>

    <!-- Login & Register -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registerQuestion">Do not have an account?</string>
    <string name="register">Register</string>
    <string name="loginQuestion">Do you have an account?</string>
    <string name="passwordConfirmation">Confirm password</string>
    <string name="username">Username</string>
    <string name="termsAndConditions">Accept the terms and conditions</string>

    <!-- Workout add & history-->
    <string name="addNewWorkout">Add New Workout</string>
    <string name="workoutName">Workout name</string>
    <string name="burnedCalories">Burned calories</string>
    <string name="workoutDate">Date of Workout</string>
    <string name="date">Date</string>
    <string name="workoutDuration">Workout duration (min)</string>
    <string name="workoutChoosePicture">Choose picture</string>
    <string name="saveWorkout">Save</string>
    <string name="workoutHistory">Workout history</string>
    <string name="signOut">Sign out</string>
    <string name="workoutNameDefault">workout_currentDate</string>

    <!-- Workout details -->
    <string name="workoutDetails">Workout details</string>
    <string name="workoutNameDetail">Workout name: </string>
    <string name="workoutBurnedCaloriesDetail">Burned calories: </string>
    <string name="workoutDateDetail">Date of workout: </string>
    <string name="workoutDurationDetail">Workout duration (min): </string>
    <string name="workoutPictureDetail">Picture: </string>

    <!-- Errors User -->
    <string name="errorEmail">Please enter email</string>
    <string name="errorPassword">Please enter password</string>
    <string name="errorEmailPattern">Please enter valid email</string>
    <string name="errorPasswordConfirmation">Please confirm password</string>
    <string name="errorPasswordMatch">The 2 passwords does not match</string>
    <string name="errorUsername">Please enter username</string>
    <string name="errorTermsAndConditions">Please check the terms and conditions</string>
    <string name="errorRegister">Register failed</string>
    <string name="errorLogin">Login failed</string>

    <!-- Errors workout -->
    <string name="errorAddWorkoutName">Please add workout name</string>
    <string name="errorAddWorkoutBurnedCalories">Please add burned calories</string>
    <string name="errorAddWorkoutDate">Please add workout date</string>
    <string name="errorAddWorkoutDuration">Please add workout duration</string>
    <string name="errorAddWorkoutPicture">Please add workout picture</string>
    <string name="errorSaveWorkout">Saving failed</string>
    <string name="errorWorkoutPicture">Picture uploading failed</string>
    <string name="errorWorkoutPictureDetail">Picture showing failed</string>

    <!-- Success -->
    <string name="successRegister">Register successful</string>
    <string name="successSave">Workout saved successful</string>
    <string name="successChangeUsername">Username changed successful</string>

    <!-- User -->
    <string name="userProfile">User profile</string>
    <string name="userChangeUsername">Change username</string>
    <string name="saveChange">Change</string>
    <string name="errorDisplayUsername">Error display username</string>
    <string name="errorChangeUsername">Username change failed</string>
    <string name="errorSameUsername">New username cannot be old username</string>


</resources>