<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddNewWorkoutActivity">

    <TextView
        android:id="@+id/tvAddNewWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/addNewWorkout"
        android:textColor="@color/orange"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAddNewWorkoutName"
        android:layout_width="258dp"
        android:layout_height="43dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/workoutName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddNewWorkout" />

    <EditText
        android:id="@+id/etAddNewWorkoutBurnedCalories"
        android:layout_width="258dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/burnedCalories"
        android:inputType="number"
        android:digits="0123456789"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddNewWorkoutName" />

    <Button
        android:id="@+id/btnAddNewWorkoutDate"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddNewWorkoutBurnedCalories" />

    <TextView
        android:id="@+id/tvAddNewWorkoutDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/workoutDate"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toEndOf="@+id/btnAddNewWorkoutDate"
        app:layout_constraintTop_toBottomOf="@+id/etAddNewWorkoutBurnedCalories" />

    <EditText
        android:id="@+id/etAddNewWorkoutDuration"
        android:layout_width="258dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/workoutDuration"
        android:inputType="number"
        android:digits="0123456789"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddNewWorkoutDate" />

    <Button
        android:id="@+id/btnAddNewWorkoutChoosePicture"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:text="@string/workoutChoosePicture"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddNewWorkoutDuration" />

    <ImageView
        android:id="@+id/ivAddNewWorkoutChoosePicture"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAddNewWorkoutChoosePicture"
        app:layout_constraintTop_toBottomOf="@+id/etAddNewWorkoutDuration" />

    <Button
        android:id="@+id/btnSaveWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveWorkout"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddNewWorkoutChoosePicture" />
</androidx.constraintlayout.widget.ConstraintLayout>